// Vitest Snapshot v1

exports[`BackTop > should render default correctly 1`] = `
"<button class=\\"fx-back-top\\" style=\\"transform: translate3d(0px, 0px, 0px); display: none;\\">
  <icon-stub icon=\\"[object Object]\\" spin=\\"false\\" size=\\"0\\" width=\\"0\\" height=\\"0\\"></icon-stub>
</button>"
`;

exports[`BackTop > should render prop offset=[0, -50] correctly 1`] = `
"<button class=\\"fx-back-top\\" style=\\"transform: translate3d(0px, -50px, 0px); display: none;\\">
  <icon-stub icon=\\"[object Object]\\" spin=\\"false\\" size=\\"0\\" width=\\"0\\" height=\\"0\\"></icon-stub>
</button>"
`;

exports[`BackTop > should render set default slot correctly 1`] = `"<button class=\\"fx-back-top\\" style=\\"transform: translate3d(0px, 0px, 0px); display: none;\\">BackTop</button>"`;
